--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>jdom</artifactId>
             <version>2.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
 
